Updating Damla's Bio - 2023 workshop

--- a/index.html
+++ b/index.html
@@ -386,18 +386,20 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://damlasenolcali.github.io/">Damla Senol Cali</a></h4>
-                                <h3 class="keynote-subheading">Hardware Acceleration specialist, Bionano Genomics</h3>
+                                <h3 class="keynote-subheading">Accelerating the Transformation in How We Analyze the Human Genome</h3>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
-                                  I work in Hardware Acceleration at Bionano Genomics.
-                                  I received my Ph.D. degree in Computer Engineering from the SAFARI Research Group at Carnegie Mellon University,
-                                  where I was advised by Prof. Onur Mutlu and Prof. Saugata Ghose.
-                                  My research focuses on hardware/software co-design for accelerating bioinformatics applications and genomic data analysis.
-                                  I am also excited about memory systems and processing-in-memory.
-                                  During my Ph.D., I also interned at Intel Labs in 2018 and 2020.
-                                  I obtained my M.S. in Computer Engineering from Carnegie Mellon University in 2019,
-                                  and my B.S. in Computer Engineering from Bilkent University in 2015.
+                                  Dr. Damla Senol Cali is a Staff Software Engineer, focusing on Hardware Acceleration at Bionano.
+                                  Her work at Bionano includes leading efforts to develop a new hardware acceleration platform for the analysis of Bionano’s
+                                  Optical Genome Mapping (OGM) data and collaborating with bioinformatics scientists and software engineering teams to create
+                                  powerful frameworks to accelerate bioinformatics workloads and emerging applications. She received her Ph.D.
+                                  degree in Computer Engineering from Carnegie Mellon University in 2021.
+                                  Her work broadly spans bioinformatics and computer architecture, focusing on hardware/software co-design for accelerating bioinformatics
+                                  applications and genomic data analysis. During her Ph.D.,
+                                  she has published several papers that appeared in top computer architecture venues including MICRO and ISCA.
+                                  She obtained her M.S. in Computer Engineering from Carnegie Mellon University in 2019,
+                                  and her B.S. in Computer Engineering from Bilkent University, Turkey in 2015. During her Ph.D., she also interned at Intel Labs in 2018 and 2020.
                                 </p>
                             </div>
                         </div>
