Added talks' topics

--- a/index.html
+++ b/index.html
@@ -348,8 +348,7 @@
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://vcresearch.berkeley.edu/faculty/katherine-yelick">Katherine A. Yelick</a></h4>
                                 <h3 class="keynote-subheading">Professor of Electrical Engineering and Computer Science , University of California, Berkeley</h3>
-                                <!-- <h3 class="keynote-subheading">"Protein Clustering: Parallelizing an Expensive Irregular Computation"</h3> -->
-                                <!--<h5 class="subheading">8:20-9:20</h5> !-->
+                                <p class="text-muted"><strong>Genomic Analysis at Scale: Mapping Irregular Computations to Advanced Architectures</strong></p>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
@@ -368,8 +367,7 @@
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://lavenier.net/homepage/">Dominique Lavenier</a></h4>
                                 <h3 class="keynote-subheading">CNRS research Director, IRISA/INRIA</h3>
-                                <!-- <h3 class="keynote-subheading">"Building the Human Pangenome"</h3> -->
-                                <!--<h5 class="subheading">8:20-9:20</h5> !-->
+                                <p class="text-muted"><strong>Exploring genomic algorithms on UPMEM Processing-in-Memory Architecture</strong></p>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
@@ -386,7 +384,8 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://damlasenolcali.github.io/">Damla Senol Cali</a></h4>
-                                <h3 class="keynote-subheading">Accelerating the Transformation in How We Analyze the Human Genome</h3>
+                                <h3 class="keynote-subheading">Hardware Acceleration specialist, Bionano Genomics</h3>
+                                <p class="text-muted"><strong>Accelerating the Transformation in How We Analyze the Human Genome</strong></p>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
