dominique talk title updated

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <tr>
               <td><strong>13:00 - 13:50</strong></td>
               <td><strong>Dominique Lavenier</strong>
-                <br><i>"Exploring genomic algorithms on UPMEM Processing-in-Memory Architecture" </i>
+                <br><i>"Exploring genomic algorithms on Processing-in-Memory Architecture" </i>
               </td>
             </tr>
 
