dominique talk title updated - small fix

--- a/index.html
+++ b/index.html
@@ -446,8 +446,7 @@
                 <div class="timeline-heading">
                   <h4><a target="_blank" href="https://lavenier.net/homepage/">Dominique Lavenier</a></h4>
                   <h3 class="keynote-subheading">CNRS research Director, IRISA/INRIA</h3>
-                  <p class="text-muted"><strong>Exploring genomic algorithms on UPMEM Processing-in-Memory
-                      Architecture</strong></p>
+                  <p class="text-muted"><strong>Exploring genomic algorithms on Processing-in-Memory Architecture</strong></p>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
