--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
       </div>
       <h3 class="heading-subtitle">June 18<sup>th</sup>, 2023</h3>
+      <h3 class="hotel-heading">Magnolia 19-20, Marriott World Center Orlando</h3>
       <h3 class="heading-subtitle">In conjunction with 50th IEEE International Symposium on Computer Architecture</h3>
       <h3 class="heading-subtitle">Orlando, Florida, USA</h3>
       <h3 class="section-heading text-center"><a href="https://aacbb-workshop.github.io/">Workshop website</a></h3>
