--- a/index.html
+++ b/index.html
@@ -333,6 +333,21 @@
 
             <tr>
               <td>16:00 - 16:25</td>
+              <td>
+                <br><i>"A Framework for High-throughput Sequence Alignment using Real Processing-in-Memory Systems"</i>
+              </td>
+            </tr>
+
+            <tr>
+              <td>16:25 - 16:50</td>
+              <td>Yilin Feng, Zheyu Li, Gulsum Gudukbay Akbulut, Vijaykrishnan Narayanan, Mahmut Taylan Kandemir and
+                Chitaranjan Das
+                <br><i>"FPGA Implementation of Adaptive Band Event Alignment using High-Level Synthesis "</i>
+              </td>
+            </tr>
+
+            <tr>
+              <td>16:50 - 17:15</td>
               <td>Meryem Banu Cavlak, Gagandeep Singh, Mohammed Alser, Can Firtina, Joël Lindegger, Mohammad
                 Sadrosadati, Nika Mansouri Ghiasi, Can Alkan and Onur Mutlu
                 <br>
@@ -341,7 +356,7 @@
             </tr>
 
             <tr>
-              <td>16:25 - 16:50</td>
+              <td>17:15 - 17:40</td>
               <td>Can Firtina, Nika Mansouri Ghiasi, Joel Lindegger, Gagandeep Singh, Meryem Banu Cavlak, Haiyu Mao and
                 Onur Mutlu
                 <br><i>"RawHash: Enabling Fast and Accurate Real-Time Analysis of Raw Nanopore Signals for Large
@@ -350,15 +365,7 @@
             </tr>
 
             <tr>
-              <td>16:50 - 17:15</td>
-              <td>Yilin Feng, Zheyu Li, Gulsum Gudukbay Akbulut, Vijaykrishnan Narayanan, Mahmut Taylan Kandemir and
-                Chitaranjan Das
-                <br><i>"FPGA Implementation of Adaptive Band Event Alignment using High-Level Synthesis "</i>
-              </td>
-            </tr>
-
-            <tr>
-              <td>17:15 - 17:40</td>
+              <td>17:40 - 18:05</td>
               <td>Can Firtina, Jisung Park, Mohammed Alser, Jeremie S. Kim, Damla Senol Cali, Taha Shahroodi, Nika
                 Mansouri Ghiasi, Gagandeep Singh, Konstantinos Kanellopoulos, Can Alkan and Onur Mutlu
                 <br><i>"BLEND: a fast, memory-efficient and accurate mechanism to find fuzzy seed matches in genome
@@ -367,7 +374,7 @@
             </tr>
 
             <tr>
-              <td>17:50 - 17:50</td>
+              <td>18:05 - 18:10</td>
               <td>Closing remarks</td>
             </tr>
             <tr>
