--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
             <tr>
               <td>16:00 - 16:25</td>
-              <td>
+              <td>Safaa Diab, Amir Nassereldine, Mohammed Alser, Juan Gómez Luna, Onur Mutlu and Izzat El Hajj
                 <br><i>"A Framework for High-throughput Sequence Alignment using Real Processing-in-Memory Systems"</i>
               </td>
             </tr>
